src/test/ui/suggestions/impl-on-dyn-trait-with-implicit-static-bound.stderr
error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:20:13
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |                        ------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
note: when using method `use_self` of trait `foo::MyTrait` on `foo::ObjectTrait`, an implicit `'static` requirement is introduced
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:14:26
   |
LL |     impl MyTrait for dyn ObjectTrait {
   |                          ^^^^^^^^^^^ this trait object has an implicit `'static` lifetime requirement
LL |         fn use_self(&self) -> &() { panic!() }
   |            -------- the `'static` requirement is introduced when calling this method
help: consider relaxing the implicit `'static` requirement
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {
   |                                      ^^^^

error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:69:13
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |                        ------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
note: when using method `use_self` on `bat::ObjectTrait`, an implicit `'static` requirement is introduced
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:64:14
   |
LL |     impl dyn ObjectTrait {
   |              ^^^^^^^^^^^ this trait object has an implicit `'static` lifetime requirement
LL |         fn use_self(&self) -> &() { panic!() }
   |            -------- the `'static` requirement is introduced when calling this method
help: consider relaxing the implicit `'static` requirement
   |
LL |     impl dyn ObjectTrait + '_ {
   |                          ^^^^

error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:37:13
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> &'a () {
   |                        ------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
note: when using method `use_self` of trait `bar::MyTrait` on `bar::ObjectTrait`, an implicit `'static` requirement is introduced
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:31:26
   |
LL |     impl MyTrait for dyn ObjectTrait {
   |                          ^^^^^^^^^^^ this trait object has an implicit `'static` lifetime requirement
LL |         fn use_self(&self) -> &() { panic!() }
   |            -------- the `'static` requirement is introduced when calling this method
help: consider relaxing the implicit `'static` requirement
   |
LL |     impl MyTrait for dyn ObjectTrait + '_ {
   |                                      ^^^^

error[E0759]: cannot infer an appropriate lifetime
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:54:13
   |
LL |     fn use_it<'a>(val: &'a Box<dyn ObjectTrait + 'a>) -> &'a () {
   |                        ----------------------------- this data with lifetime `'a`...
LL |         val.use_self()
   |             ^^^^^^^^ ...is captured and required to live as long as `'static` here
   |
note: when using method `use_self` of trait `baz::MyTrait` on `baz::ObjectTrait`, an implicit `'static` requirement is introduced
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:48:30
   |
LL |     impl MyTrait for Box<dyn ObjectTrait> {
   |                              ^^^^^^^^^^^ this trait object has an implicit `'static` lifetime requirement
LL |         fn use_self(&self) -> &() { panic!() }
   |            -------- the `'static` requirement is introduced when calling this method
help: consider relaxing the implicit `'static` requirement
   |
LL |     impl MyTrait for Box<dyn ObjectTrait + '_> {
   |                                          ^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0759`.
